@@ -1,3 +1,8 @@
+Thu Oct 21 10:26:18 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
+          Removed whitespaces from generated code.
+
 Thu Oct 21 08:01:49 UTC 2010  Martin Corino  <mcorinom@remedy.nl>
 
         * tests/Bug_3919_Regression/Test.idl:
